[tool.poetry]
name = "lecture-2-env"
version = "1.0.0"
description = "Virtual environment for CausalML lecture 5 notebook"
authors = ["Giorgio Coppola and Xiaohan Wu"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.3.2"
plotnine = "^0.15.0"
polars = "^1.32.3"
pyarrow = "^21.0.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.0"
pandas = "^2.2.0"
duckdb = "^1.1.0"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"