[tool.poetry]
name = "lecture-5-env"
version = "1.0.0"
description = "Virtual environment for CausalML lecture 5 notebook"
authors = ["Giorgio Coppola and Xiaohan Wu"]
packages = []
package-mode = false

[tool.poetry.dependencies]
# pick one of these lines:
python = ">=3.11,<3.14"

jupyter = "^1.1.1"
ipykernel = "^6.30.1"

numpy = "^2"
pandas = "^2.2"
scikit-learn = ">=1.4,<1.8"
matplotlib = "^3.9"
seaborn = "^0.13.2"
plotnine = "^0.15.0"
statsmodels = "^0.14"

polars = "^1.32.3"
pyarrow = "^21.0.0"
duckdb = "^1.1.0"

econml = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
